fix sizing and spacing

--- a/template/styles/add-center.css
+++ b/template/styles/add-center.css
@@ -1,7 +1,15 @@
 
-@media screen and (max-width: 720px) {
-
+@media screen and (min-width: 720px) {
+  
 }
+
+@media screen and (min-width: 800px) {
+    #main-div {
+        padding-left: 150px;
+        padding-right: 150px; 
+    }
+  }
+
 .location-widget {
     margin-left: 5px;
 }
